fixed scroll z-index

--- a/src/css/components/_scroll-up.scss
+++ b/src/css/components/_scroll-up.scss
@@ -6,7 +6,7 @@
   visibility: hidden;
   overflow: hidden;
   text-align: center;
-  z-index: 99999999;
+  z-index: 1000; // TODO: Change for the map legend
   background-color: #777777;
   color: #eeeeee;
   width: 50px;
